--- a/sass/app.scss
+++ b/sass/app.scss
@@ -34,6 +34,7 @@ body {
     background-color: #FFF;
     margin: 50px 5%;
   }
+  &.page-Buttons,
   &.page-Selectors,
   &.page-Comments {
     background-color: #FFF;
