Itembox: added wrapper for rows

--- a/_includes/blocks/popup/ms-row-reset-to-default.html
+++ b/_includes/blocks/popup/ms-row-reset-to-default.html
@@ -1,9 +1,11 @@
 <div class="itemBox__suggestions">
-  <ul class="itemBox__row itemBox__row--item JS_resetToDefault JS_itemBox--resetSuggestion" reset-file="columnpicker" style="display: none;">
-    <li class="itemBox__cell itemBox__cell--action">
-      <div class="itemBox__cellInner">
-        <div class="itemBox__action">Reset to default</div>
-      </div>
-    </li>
-  </ul>
+  <div class="itemBox__row">
+    <ul class="itemBox__rowInner itemBox__rowInner--item JS_resetToDefault JS_itemBox--resetSuggestion" reset-file="columnpicker" style="display: none;">
+      <li class="itemBox__cell itemBox__cell--action">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action">Reset to default</div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
