--- a/_includes/blocks/popup/ms-row-create-new.html
+++ b/_includes/blocks/popup/ms-row-create-new.html
@@ -1,7 +1,9 @@
-<ul class="itemBox__row JS_createNewTag JS_filterableCell">
-  <li class="itemBox__cell itemBox__cell--action">
-    <div class="itemBox__cellInner JS_text">
-      <div class="itemBox__action">Create New</div>
-    </div>
-  </li>
-</ul>
+<div class="itemBox__row">
+  <ul class="itemBox__rowInner JS_createNewTag JS_filterableCell">
+    <li class="itemBox__cell itemBox__cell--action">
+      <div class="itemBox__cellInner JS_text">
+        <div class="itemBox__action">Create New</div>
+      </div>
+    </li>
+  </ul>
+</div>
