--- a/_includes/blocks/popup/ms-row-load-more.html
+++ b/_includes/blocks/popup/ms-row-load-more.html
@@ -1,7 +1,9 @@
-<ul class="itemBox__row itemBox__row--item itemBox__row--action JS_loadMoreButton">
-  <li class="itemBox__cell itemBox__cell--action">
-    <div class="itemBox__cellInner">
-      <div class="itemBox__action">Load <span>25</span> more out of 75</div>
-    </div>
-  </li>
-</ul>
+<div class="itemBox__row">
+  <ul class="itemBox__rowInner itemBox__rowInner--item itemBox__rowInner--action JS_loadMoreButton">
+    <li class="itemBox__cell itemBox__cell--action">
+      <div class="itemBox__cellInner">
+        <div class="itemBox__action">Load <span>25</span> more out of 75</div>
+      </div>
+    </li>
+  </ul>
+</div>
