--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -22,8 +22,27 @@
       padding: 20px;
     }
   }
-
   &__row {
+    &:nth-of-type(odd) {
+      >.itemBox__rowInner--item {
+        background-color: var(--color-grey-lightest);
+
+        .itemBox__cell:not(.flex-grow-0)::after {
+          background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(242,242,242,.5) 50%, var(--color-grey-lightest) 80%, var(--color-grey-lightest) 100%);
+        }
+      }
+    }
+
+    &:nth-of-type(even) {
+      >.itemBox__rowInner--item {
+        .itemBox__cell:not(.flex-grow-0)::after {
+          background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.5) 50%, #FFF 80%, #FFF 100%);
+        }
+      }
+    }
+  }
+
+  &__rowInner {
     position: relative;
     display: flex;
     background-color: #FFF;
@@ -104,20 +123,6 @@
               background-color: var(--color-blue);
             }
           }
-        }
-      }
-
-      &:nth-of-type(odd) {
-        background-color: var(--color-grey-lightest);
-
-        .itemBox__cell:not(.flex-grow-0)::after {
-          background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(242,242,242,.5) 50%, var(--color-grey-lightest) 80%, var(--color-grey-lightest) 100%);
-        }
-      }
-
-      &:nth-of-type(even) {
-        .itemBox__cell:not(.flex-grow-0)::after {
-          background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.5) 50%, #FFF 80%, #FFF 100%);
         }
       }
 
