--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -1,22 +1,24 @@
-<ul class="itemBox__row">
-  <li class="itemBox__cell">
-    <div class="itemBox__cellInner">
-      <div class="itemBox__action">←</div>
-    </div>
-  </li>
-  <li class="itemBox__cell text-center">
-    <div class="itemBox__cellInner">
-      <div class="itemBox__action">April</div>
-    </div>
-  </li>
-  <li class="itemBox__cell text-center">
-    <div class="itemBox__cellInner">
-      <div class="itemBox__action">2018</div>
-    </div>
-  </li>
-  <li class="itemBox__cell text-right">
-    <div class="itemBox__cellInner">
-      <div class="itemBox__action">→</div>
-    </div>
-  </li>
-</ul>
+<div class="itemBox__row">
+  <ul class="itemBox__rowInner">
+    <li class="itemBox__cell">
+      <div class="itemBox__cellInner">
+        <div class="itemBox__action">←</div>
+      </div>
+    </li>
+    <li class="itemBox__cell text-center">
+      <div class="itemBox__cellInner">
+        <div class="itemBox__action">April</div>
+      </div>
+    </li>
+    <li class="itemBox__cell text-center">
+      <div class="itemBox__cellInner">
+        <div class="itemBox__action">2018</div>
+      </div>
+    </li>
+    <li class="itemBox__cell text-right">
+      <div class="itemBox__cellInner">
+        <div class="itemBox__action">→</div>
+      </div>
+    </li>
+  </ul>
+</div>
