--- a/_includes/blocks/popup/ms-row-use-global-search.html
+++ b/_includes/blocks/popup/ms-row-use-global-search.html
@@ -1,6 +1,6 @@
 <div class="itemBox__suggestions">
   <div class="itemBox__row">
-    <ul class="itemBox__row itemBox__row--item JS_globalSearch" style="display: none;">
+    <ul class="itemBox__rowInner itemBox__rowInner--item JS_globalSearch" style="display: none;">
       <li class="itemBox__cell itemBox__cell--action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">Use global search</div>
