--- a/_includes/blocks/popup/ms-sublist-tags-colors-color.html
+++ b/_includes/blocks/popup/ms-sublist-tags-colors-color.html
@@ -1,25 +1,22 @@
 <div class="itemBox itemBox--sublist JS_itemBox--children JS_itemBox--children JS_itemBox--colors"  style="display: none;">
   {% for item in site.data.color-sublist.items %}
-    <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner JS_itemBox__cellInner--color">
-
-          <div class="itemBox__action">
-
-            <div class="selector selector--expanded">
-              <div class="selector__item JS_selectorItem--active selector__item--selected">
-                <div class="selector__block">
-                  <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}"></span>
+    <div class="itemBox__row">
+      <ul class="itemBox__rowInner itemBox__rowInner--item">
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner JS_itemBox__cellInner--color">
+            <div class="itemBox__action">
+              <div class="selector selector--expanded">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
+                  <div class="selector__block">
+                    <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}"></span>
+                  </div>
                 </div>
               </div>
+              <span>{{item.name}}</span>
             </div>
-
-            <span>{{item.name}}</span>
-
           </div>
-
-        </div>
-      </li>
-    </ul>
+        </li>
+      </ul>
+    </div>
   {% endfor %}
 </div>
