--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -9,18 +9,20 @@
   {% for itemgroup in site.data.user-menu.itemgroups %}
     <div class="itemBox">
       {% for item in itemgroup %}
-      <ul class="itemBox__row itemBox__row--item itemBox__row--permalink">
-        <li class="itemBox__cell flex-grow-0 itemBox__cell--permalink">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__value">{{item.icon}}</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--permalink">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__value">{{item.name}}</div>
-          </div>
-        </li>
-      </ul>
+        <div class="itemBox__row">
+          <ul class="itemBox__rowInner itemBox__rowInner--item itemBox__rowInner--permalink">
+            <li class="itemBox__cell flex-grow-0 itemBox__cell--permalink">
+              <div class="itemBox__cellInner">
+                <div class="itemBox__value">{{item.icon}}</div>
+              </div>
+            </li>
+            <li class="itemBox__cell itemBox__cell--permalink">
+              <div class="itemBox__cellInner">
+                <div class="itemBox__value">{{item.name}}</div>
+              </div>
+            </li>
+          </ul>
+        </div>
       {% endfor %}
     </div>
     <!-- /.itemBox -->
